add task views and more controller methods

--- a/app/views/mission/new.html.erb
+++ b/app/views/mission/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="center-block">
 
-  <%= render 'projects/form',  :locals => {:@project => @project} %>
+  <%= render 'missions/form',  :locals => {:@mission => @mission} %>
   </div>
 
 </div>
