--- a/app/views/mission/show.html.erb
+++ b/app/views/mission/show.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to "Edit Mission", edit_mission_path(@mission) %>
 
-<%=   link_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are you sure?" } %> 
+<%=   link_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are You Sure?" } %> 
 
 <% tasks = @mission.tasks %>
 
