fix user migration

--- a/app/views/mission/new.html.erb
+++ b/app/views/mission/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="center-block">
 
-  <%= render 'missions/form',  :locals => {:@mission => @mission} %>
+  <%= render 'mission/form',  :locals => {:@mission => @mission} %>
   </div>
 
 </div>
