--- a/app/views/mission/show.html.erb
+++ b/app/views/mission/show.html.erb
@@ -4,8 +4,8 @@
 
 <%= link_to "Edit Mission", edit_mission_path(@mission) %>
 
-<%=   link_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are You Sure?" } %> 
+<%= link_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are You Sure?" } %> 
 
 <% tasks = @mission.tasks %>
 
-<%= render partial: 'tasks', :locals => {:@tasks => tasks}%>
+<%= render partial: 'tasks', :locals => {:@task => tasks}%>
