fix routes, params, authentication, login, signup,database

--- a/app/views/missions/form.html.erb
+++ b/app/views/missions/form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_for @project do |t| %>
+<%= form_for @mission do |t| %>
   <div class="form-group">
     <%= t.label :name, "Name" %>
     <%= t.text_field :name %>
