--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,42 @@
   <%# #navbar %>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Missions</a>
+    <a class="navbar-brand">Tasker</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" courier-controls="navbarNavDropdown" courier-expanded="false" courier-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
+     <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
 
-  </nav>
+          <li class="nav-item">
+            <a class="btn btn-outline-success" href="<%= new_task_path %>">Make a Task</a>
+          </li>
 
+            <li class="nav-item">
+            <a class="nav-link" href="<%= missions_path%>">Home</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="<%= new_missions_path %>">Create New Mission</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="<%=tasks_path(current_user) %>">Tasks</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/tasks">All Tasks</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Log Out</a>
+          </li>
+
+        </ul>
+      </div>
+    </nav>
 
 
 
