--- a/app/views/missions/edit.html.erb
+++ b/app/views/missions/edit.html.erb
@@ -1,3 +1,3 @@
 
 
-<%= render 'mission/form',  :locals => {:@mission => @mission} %>
+<%= render 'missions/form',  :locals => {:@mission => @mission} %>
