--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Welcome, <%= @user.username %>  </h1>
 
-<h2>These are your Missions:</h2>
+<h2>These Are Your Missions:</h2>
 
 <ul>
   <% @mission.all.each do |mission| %>
