fix task path and typo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="<%=task_path %>">Tasks</a>
+            <a class="nav-link" href="<%=new_task_path %>">Tasks</a>
           </li>
 
           <li class="nav-item">
