add usermission migration

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,15 +1,12 @@
 <h1>Missions</h1>
 
-<%@missions.all.each do |mission|%>
+<%@missions.each do |mission|%>
 
 <div class="container">
 
 <h2> <% link_to "#{mission}.name", missions_path(mission)%></h2>
 
-<% tasks =mission.tasks%>
-
-
-<%= button_to 'logout', logout_path, method: :delete %>
+</div>
 
 
 <%end%>
