--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -6,7 +6,8 @@
 
   <div class="center-block">
 
-  <%= render 'mission/form',  :locals => {:@mission => @mission} %>
+  <%= render partial: 'form',  locals: {mission: @mission} %>
+
   </div>
 
 </div>
