--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.logout-btn{
+
+  background: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+}
