--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
   <body class = "text center" >
   <%# #navbar %>
+<%#user needs to be signed in in order to see the rest of the navbar%>
+
+
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand">Tasker</a>
@@ -19,21 +22,23 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-
      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
 
-          <li class="nav-item">
-            <a class="btn btn-outline-success" href="<%= new_task_path %>">Make a Task</a>
-          </li>
+ <% if authorized? %>
 
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="<%=missions_path%>">Home</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="<%=new_mission_path %>">Create New Mission</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="<%= new_task_path %>">Make a Task</a>
+          </li>
+ 
 
           <li class="nav-item">
             <a class="nav-link" href="<%=new_task_path %>">Tasks</a>
@@ -44,19 +49,35 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Log Out</a>
+             <%= button_to 'Logout', logout_path, method: :delete, class:'nav-link logout-btn' %>
           </li>
 
+  <%else%>
+
+    <li class="nav-item active">
+      <a class="nav-link" href="/users/new">Sign Up<span class="sr-only"></span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  href="/login">Log In</a>
+    </li>
+<% end %> 
         </ul>
       </div>
     </nav>
+
+
 
     <% if flash[:notice] %>
       <div class="notice"><%= flash[:notice] %></div>
     <% end %>
 
-    
+
+ 
+
+
+   
+
+   
     <%= yield %>
   </body>
 </html>
-<%#  %>
