--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 
-  <%= form_for(@task) do |t| %>
+  <%=form_for task do |t| %>
 
   <div class="form-group">
     <%= t.label :description, "Description" %>
