--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
 
 
   <h2>Tasks:</h2><br>
-  <%= link_to "Create a New Task!", new_user_task_path(@user) %>
+  <%= link_to "Create a New Task for the Mission!", new_user_task_path(@user) %>
 
   <br><br>
 
