fix crud for Missions and before action

--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -9,7 +9,7 @@
 
 
   <div class="actions">
-    <%= t.submit "Create", class: "btn btn-primary" %>
+    <%= t.submit class: "btn btn-primary" %>
   </div>
 
 
