--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-<h2> <%= link_to mission.name, missions_path(mission)%></h2>
+<h2> <%= link_to mission.name, mission_path(mission)%></h2>
 
 </div>
 
