--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -25,5 +25,5 @@
 
   <h2>Completed Tasks</h2>
 
-  <%= render partial: 'completed', :locals => {:@tasks => @tasks} %>
+  <%= render partial: '/tasks/completed', :locals => {:@tasks => @tasks} %>
 </div>
