--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -7,7 +7,7 @@
   <div class="center-block">
 
   <%= render partial: 'form',  locals: {mission: @mission} %>
-
+  <%# <%=render partial: 'form', :locals => {:@tasks => @tasks} %>
   </div>
 
 </div>
