--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -1,19 +1,33 @@
+
+<div class = "container">
+
 <h1>
 <%= @mission.name %>
 </h1>
 
-<%= link_to "Edit Mission", edit_mission_path(@mission) %>
-
-<%= button_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are You Sure?" } %> 
+  <%= link_to "Edit Mission", edit_mission_path(@mission) %>
 
 
+
+  <%= button_to 'Delete Mission', @mission, method: :delete, data: { confirm: "Are You Sure?" } %> 
+
+  <%= button_to "Completed", @mission, method: :completed, data: {confirm: "Are You Sure?"}%>
+
+<% @mission.tasks.each do |t|%>
+
+<h3>
+<%= t.description%>
+</h3>
+
+<%end%>
+</div>
 
 
 <br><br>
 
-
-
 <div class="container">
+
+
 
   <h2>Completed Missions</h2>
 
