--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,13 +1,16 @@
-<h1>Missions</h1>
 
-<%@missions.each do |mission|%>
+<div>
+
+  <h1>Missions</h1>
+
+    <%@missions.each do |mission|%>
 
 
-<div class="container">
+  <div class="container">
 
-<h2> <%= link_to mission.name, mission_path(mission)%></h2>
+    <h2> <%= link_to mission.name, mission_path(mission)%></h2>
 
+  </div>
 </div>
-
 
 <%end%>
