--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,12 +1,12 @@
 
 
 <div class="container">
-
+<h2>Create a Mission</h2>
 <br><br>
 
   <div class="center-block">
 
-  <%= render partial: 'form',  locals: {mission: @mission} %>
+  <%= render 'form',  locals: {mission: @mission} %>
   <%# <%=render partial: 'form', :locals => {:@tasks => @tasks} %>
   </div>
 
