--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,6 +1,7 @@
 
 
-<%= form_for mission do |t| %>
+<%= form_for @mission do |t| %>
+
   <div class="form-group">
     <%= t.label :name, "Name" %>
     <%= t.text_field :name %>
