--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -5,20 +5,32 @@
     <%= @mission.name %>
   </h1>
 
-
     <%= link_to "Edit Mission", edit_mission_path(@mission) %>
-    <%= button_to "Delete", @mission, method: :delete, data: {confirm: "Are You Sure?"} %>
+    <%= button_to "Delete Mission", @mission, method: :delete, data: {confirm: "Are You Sure?"} %>
 
-    <% @mission.tasks.each do |t|%>
+  <%=form_with model: @mission, url: completed_path, method: :patch do |form|%>
+  <%=form.hidden_field :id, value: @mission.id %>
+  <%=form.submit @mission.format_completed_button %>
+    <%# <%=  "Complete Mission", completed_path, method: :completed %> 
+    <%#= link_to "Complete Mission", @mission, method: :completed, data: {confirm:"Are you Sure?"}%>
+    
+  <% end %>
 
-  <h4>
-  <%= t.description%>
-  </h4>
-    <%= link_to "Edit Tasks", edit_task_path(t) %>
+            <% @mission.tasks.each do |t|%>
 
-    <%= button_to '🗑️', t, method: :delete, data: { confirm: "Are You Sure?" } %> 
+          <h4>
+          <%= t.description%>
+          </h4>
+            <%= link_to "Edit Tasks", edit_task_path(t) %>
 
-    <%end%>
+            <%= button_to '🗑️', t, method: :delete, data: { confirm: "Are You Sure?" } %> 
+            
+            <%end%>
+
+
+
+
+
 </div>
         
 
@@ -30,7 +42,6 @@
 
 
   <h2>Completed Missions</h2>
-    <%= button_to "Completed", @mission, method: :completed, data: {confirm: "Are You Sure?"}%>
 
-  <%# <%= render partial: '/completed', :locals => {mission: => @mission} %> 
-<%# </div> %>
+ 
+</div> %>
